fixed table cell overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -77,9 +77,10 @@
 
 .hero {
     h1 {
-        background: -webkit-linear-gradient(120deg, #0095ff 30%, #42d392);
+        background: linear-gradient(120deg, #0095ff 30%, #42d392);
         -webkit-text-fill-color: transparent;
         -webkit-background-clip: text;
+        background-clip: text;
         font-weight: 700;
         font-size: 2.25rem;
 
@@ -100,7 +101,6 @@ table {
     border-collapse: collapse;
     width: 100%;
     margin-bottom: 1rem;
-    overflow: hidden;
     border: 1px solid var(--sl-color-gray-5);
 
     th,
@@ -127,6 +127,12 @@ table {
     padding-inline-start: 1rem;
 }
 
-.sl-markdown-content table:not(:where(.not-content *)) {
+.sl-markdown-content table tbody td {
     font-size: 0.8em;
+}
+
+.sl-markdown-content table :is(th:nth-child(3), td:nth-child(3)) {
+    white-space: normal;
+    overflow-wrap: anywhere;
+    word-break: break-word;
 }
